Fixed as-detail text overflow issue

--- a/src/WebComponents/Attributes/PersistentObjectAttributeAsDetail/persistent-object-attribute-as-detail-row.scss
+++ b/src/WebComponents/Attributes/PersistentObjectAttributeAsDetail/persistent-object-attribute-as-detail-row.scss
@@ -34,6 +34,13 @@
                 position: relative;
                 border: 1px solid var(--theme-light-border);
                 box-sizing: border-box;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                padding: 0 var(--theme-h5);
+
+                > span {
+                    padding: 0;
+                }
             }
 
             vi-persistent-object-attribute-validation-error:not([hidden]) + div {
